Added register.html, login.css, register.css files.

--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,9 @@
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
+    <!-- Login custom CSS-->
+    <link href="../dist/css/login.css" rel="stylesheet">
+
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -39,7 +42,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Tere tulemast!</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
@@ -48,15 +51,19 @@
                                     <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Parool" name="password" type="password" value="">
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                        <input name="remember" type="checkbox" value="Remember Me">Jäta mind meelde
                                     </label>
                                 </div>
+                                <div class="etc-login-form">
+                                    <p>Unustasid parooli? <a href="#">lähtesta</a></p>
+                                    <p>Uus kasutaja? <a href="register.html">registreeru</a></p>
+                                </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="index.html" class="btn btn-lg btn-success btn-block">Logi sisse</a>
                             </fieldset>
                         </form>
                     </div>
