Initial AngularJS setup

--- a/pages/harjutustunnid/kasutajaliidesed_nurgelised_kassid.html
+++ b/pages/harjutustunnid/kasutajaliidesed_nurgelised_kassid.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="app_nurgelised_kassid.css">
-    <script src="../js/angular.min.js"></script>
-    <script src="../js/app_nurgelised_kassid.js"></script>
+    <script src="../../js/angular.min.js"></script>
+    <script src="../../js/app_nurgelised_kassid.js"></script>
 </head>
 <body ng-controller="CatsController as cats">
 <section ng-controller="TabsController as tabs">
