--- a/pages/harjutustunnid/kasutajaliidesed_prax_kassid.html
+++ b/pages/harjutustunnid/kasutajaliidesed_prax_kassid.html
@@ -29,7 +29,7 @@
 <span id="error"></span>
 
 <!-- jQuery -->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
 
 <script>
     $(document).ready(function () {
