--- a/pages/register.html
+++ b/pages/register.html
@@ -74,7 +74,7 @@
                             </div>
                             <p>Oled juba kasutaja? <a href="login.html">logi sisse</a></p>
                             <!-- Change this to a button or input when using this as a form -->
-                            <a href="index.html" class="btn btn-lg btn-success btn-block">Registreerin</a>
+                            <a href="../app/components/home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>
                         </fieldset>
                     </form>
                 </div>
