--- a/pages/harjutustunnid/bad_login.html
+++ b/pages/harjutustunnid/bad_login.html
@@ -11,8 +11,8 @@
     <title>Bad Login</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../dist/css/bad_login_style.css" rel="stylesheet">
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../dist/css/bad_login_style.css" rel="stylesheet">
 
     <!--&lt;!&ndash; MetisMenu CSS &ndash;&gt;-->
     <!--<link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">-->
@@ -27,7 +27,7 @@
     <!--<link href="../bower_components/morrisjs/morris.css" rel="stylesheet">-->
 
     <!-- Custom Fonts -->
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -69,10 +69,10 @@
 </div>
 
 <!-- jQuery -->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script>
     //    function myFunction() {
