--- a/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
+++ b/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="app.css">
-    <script src="../js/angular.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="../../js/angular.min.js"></script>
+    <script src="../../js/app.js"></script>
 </head>
 <body ng-controller="LegsController as legs">
 <!--<p>{{hello}}</p>-->
