--- a/pages/login.html
+++ b/pages/login.html
@@ -63,7 +63,7 @@
                                     <p>Uus kasutaja? <a href="register.html">registreeru</a></p>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Logi sisse</a>
+                                <a href="../app/components/home/home.html" class="btn btn-lg btn-success btn-block">Logi sisse</a>
                             </fieldset>
                         </form>
                     </div>
