--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -13,7 +13,10 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="/app/components/home/home.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+                <a href="../../../app/components/home/home.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+            </li>
+            <li>
+                <a href="#study_results"><i class="fa fa-dashboard fa-fw"></i> Õppetulemused</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-wrench fa-fw"></i> IAPB64<span class="fa arrow"></span></a>
