--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -13,7 +13,7 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="../../../app/components/home/home.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+                <a href="#/"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
             </li>
             <li>
                 <a href="#study_results"><i class="fa fa-dashboard fa-fw"></i> Õppetulemused</a>
