Still working on study results module

--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -13,10 +13,10 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="#/"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+                <a href="#/"><i class="fa fa-user fa-fw"></i> Minu Nimi</a>
             </li>
             <li>
-                <a href="#study_results"><i class="fa fa-dashboard fa-fw"></i> Õppetulemused</a>
+                <a href="#study_results"><i class="fa fa-graduation-cap fa-fw"></i> Õppetulemused</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-wrench fa-fw"></i> IAPB64<span class="fa arrow"></span></a>
