Added dynamics to left panel

--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -13,7 +13,7 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="#/"><i class="fa fa-user fa-fw"></i> Minu Nimi</a>
+                <a href="#/"><i class="fa fa-dashboard fa-fw"></i> Uudised</a>
             </li>
             <li>
                 <a href="#study_results"><i class="fa fa-graduation-cap fa-fw"></i> Õppetulemused</a>
