--- a/app/shared/left_panel/left_panel_teacher.html
+++ b/app/shared/left_panel/left_panel_teacher.html
@@ -13,28 +13,34 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="/app/components/home/home.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+                <a href="#/"><i class="fa fa-dashboard fa-fw"></i> Uudised</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> IAPB64<span class="fa arrow"></span></a>
+                <a href="#/"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="../../../pages/panels-wells.html">Õpilane Üks</a>
+                        <a href="#">Second Level Item</a>
                     </li>
                     <li>
-                        <a href="../../../pages/buttons.html">Õpilane Kaks</a>
+                        <a href="#">Second Level Item</a>
                     </li>
                     <li>
-                        <a href="../../../pages/notifications.html">Õpilane Kolm</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/typography.html">Õpilane Neli</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/icons.html"> Õpilane Viis</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/grid.html">Õpilane Kuus</a>
+                        <a href="#">Third Level <span class="fa arrow"></span></a>
+                        <ul class="nav nav-third-level">
+                            <li>
+                                <a href="#">Third Level Item</a>
+                            </li>
+                            <li>
+                                <a href="#">Third Level Item</a>
+                            </li>
+                            <li>
+                                <a href="#">Third Level Item</a>
+                            </li>
+                            <li>
+                                <a href="#">Third Level Item</a>
+                            </li>
+                        </ul>
+                        <!-- /.nav-third-level -->
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
