Small visual additions

--- a/app/shared/left_panel/left_panel_teacher.html
+++ b/app/shared/left_panel/left_panel_teacher.html
@@ -13,31 +13,25 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="#/"><i class="fa fa-dashboard fa-fw"></i> Uudised</a>
+                <a href="#/"><i class="fa fa-home fa-fw"></i> Uudised</a>
             </li>
             <li>
-                <a href="#/"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
+                <a href="#/"><i class="fa fa-book fa-fw"></i> Õppeained<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="#">Second Level Item</a>
+                        <a href="#">Tarkvaratehnika</a>
                     </li>
                     <li>
-                        <a href="#">Second Level Item</a>
-                    </li>
-                    <li>
-                        <a href="#">Third Level <span class="fa arrow"></span></a>
+                        <a href="#">Kasutajaliidesed<span class="fa arrow"></span></a>
                         <ul class="nav nav-third-level">
                             <li>
-                                <a href="#">Third Level Item</a>
+                                <a href="#">Rühm A</a>
                             </li>
                             <li>
-                                <a href="#">Third Level Item</a>
+                                <a href="#">Rühm B</a>
                             </li>
                             <li>
-                                <a href="#">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Third Level Item</a>
+                                <a href="#">Rühm C</a>
                             </li>
                         </ul>
                         <!-- /.nav-third-level -->
