Working on grade sheet for teacher

--- a/app/shared/left_panel/left_panel_teacher.html
+++ b/app/shared/left_panel/left_panel_teacher.html
@@ -25,13 +25,13 @@
                         <a href="#">Kasutajaliidesed<span class="fa arrow"></span></a>
                         <ul class="nav nav-third-level">
                             <li>
-                                <a href="#">Rühm A</a>
+                                <a href="#grade_sheet_t">Rühm A</a>
                             </li>
                             <li>
-                                <a href="#">Rühm B</a>
+                                <a href="#/">Rühm B</a>
                             </li>
                             <li>
-                                <a href="#">Rühm C</a>
+                                <a href="#/">Rühm C</a>
                             </li>
                         </ul>
                         <!-- /.nav-third-level -->
