Teacher grade sheet: edit buttons now turn to green when clicked and table doesn't jump around anymore (table-layout: fixed;)

--- a/pages/harjutustunnid/bad_login.html
+++ b/pages/harjutustunnid/bad_login.html
@@ -21,7 +21,7 @@
     <!--<link href="../dist/css/timeline.css" rel="stylesheet">-->
 
     <!--&lt;!&ndash; Custom CSS &ndash;&gt;-->
-    <!--<link href="../dist/css/sb-admin-2.css" rel="stylesheet">-->
+    <!--<link href="../dist/css/ois.css" rel="stylesheet">-->
 
     <!--&lt;!&ndash; Morris Charts CSS &ndash;&gt;-->
     <!--<link href="../bower_components/morrisjs/morris.css" rel="stylesheet">-->
