Working on student work submission page

--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -19,52 +19,7 @@
                 <a href="#study_results"><i class="fa fa-graduation-cap fa-fw"></i> Õppetulemused</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> IAPB64<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="../../../pages/panels-wells.html">Õpilane Üks</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/buttons.html">Õpilane Kaks</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/notifications.html">Õpilane Kolm</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/typography.html">Õpilane Neli</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/icons.html"> Õpilane Viis</a>
-                    </li>
-                    <li>
-                        <a href="../../../pages/grid.html">Õpilane Kuus</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-sitemap fa-fw"></i> IAPB65<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="#">Õpilane Üks</a>
-                    </li>
-                    <li>
-                        <a href="#">Õpilane Kaks</a>
-                    </li>
-                    <li>
-                        <a href="#">Õpilane Kolm <span class="fa arrow"></span></a>
-                        <ul class="nav nav-third-level">
-                            <li>
-                                <a href="#">Hinded</a>
-                            </li>
-                            <li>
-                                <a href="#">Kontakt</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-third-level -->
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
+                <a href="#work_submission"><i class="fa fa-graduation-cap fa-fw"></i> Tööde esitamine</a>
             </li>
         </ul>
     </div>
