--- a/app/shared/left_panel/left_panel_student.html
+++ b/app/shared/left_panel/left_panel_student.html
@@ -19,7 +19,7 @@
                 <a href="#study_results"><i class="fa fa-graduation-cap fa-fw"></i> Õppetulemused</a>
             </li>
             <li>
-                <a href="#work_submission"><i class="fa fa-graduation-cap fa-fw"></i> Tööde esitamine</a>
+                <a href="#work_submission"><i class="fa fa-upload fa-fw"></i> Tööde esitamine</a>
             </li>
         </ul>
     </div>
