--- a/app/shared/left_panel/left_panel_teacher.html
+++ b/app/shared/left_panel/left_panel_teacher.html
@@ -16,6 +16,9 @@
                 <a href="#/"><i class="fa fa-home fa-fw"></i> Uudised</a>
             </li>
             <li>
+                <a href="#/student_groups"><i class="fa fa-group fa-fw"></i> Tudengite grupid</a>
+            </li>
+            <li>
                 <a href="#/"><i class="fa fa-book fa-fw"></i> Õppeained<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
