--- a/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
+++ b/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="app.css">
     <script src="../../js/angular.min.js"></script>
     <script src="../../js/app.js"></script>
+    <script src="../../bower_components/angular-route/angular-route.js"></script>
 </head>
-<body ng-controller="LegsController as legs">
-<!--<p>{{hello}}</p>-->
-<!--<input type="text" ng-model="hello" /><br/>-->
+<body>
+
+<div ng-controller="LegsController as legs">
+<h1>Nurgelised kassid</h1>
+
 <section ng-controller="TabsController as tabs">
     <h1>{{tabs.tabNumber}}</h1>
     <ul>
@@ -34,6 +36,21 @@
         </ul>
     </div>
 </section>
+</div>
 
+<h1>Nurgelised koerad</h1>
+
+<section ng-controller="dogEmailController">
+    <ul>
+        <li>
+            <a href="#/list">Loend</a>
+        </li>
+
+        <li>
+            <a href="#/form">Lisa koer</a>
+        </li>
+    </ul>
+    <div ng-view></div>
+</section>
 </body>
 </html>
