--- a/pages/harjutustunnid/list.html
+++ b/pages/harjutustunnid/list.html
@@ -1,5 +1,5 @@
 <ul>
     <li ng-repeat="dog in doglist">
-        {{dog.name}} - {{dog.email}}
+        <a href="#/list.detail">{{dog.name}}</a>
     </li>
 </ul>
