--- a/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
+++ b/pages/harjutustunnid/kasutajaliidesed_loeng_02.03.16.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+
+    <link href="app_nurgelised_kassid.css" rel="stylesheet">
+
     <script src="../../js/angular.min.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../bower_components/angular-route/angular-route.js"></script>
